--- a/Day one/MovieFlix.html
+++ b/Day one/MovieFlix.html
@@ -139,7 +139,10 @@
                 <p>Address: 123 Cinema Street, Movie City</p>
             </div>
         </div>
+       <div class="foot">
+        <p>Made with love by Apex-Team</p>
         <p>&copy; 2023 MovieFlix. All rights reserved.</p>
+    </div> 
     </footer>
 </body>
 
